# picoAudioSampler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
doc/: myPiCals.py  openOCD.txt  projectLog.md  setupPiPicoOpenOCD.txt  setuprealOpenOCD.txt
inc/: myTimers.h  timers.h
src/: main.c
